--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
+    "nodemailer": "^6.6.2",
     "nodemon": "^2.0.10",
     "sqlite3": "^5.0.2"
   }
